apl-compiler-backend/proj/models/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LBRACE
    NEWLINE
    RBRACE

Grammar

Rule 0     S' -> program
Rule 1     program -> KEYWORD_BEGIN statement_list KEYWORD_END
Rule 2     program -> statement_list
Rule 3     statement_list -> statement statement_list
Rule 4     statement_list -> control_statement statement_list
Rule 5     statement_list -> empty
Rule 6     statement -> assignment_statement
Rule 7     statement -> expression SEMICOLON
Rule 8     statement -> print_statement
Rule 9     statement -> natural_language
Rule 10    assignment_statement -> declaration
Rule 11    assignment_statement -> IDENTIFIER ASSIGNMENT_OP expression SEMICOLON
Rule 12    declaration -> KEYWORD_LET IDENTIFIER ASSIGNMENT_OP expression SEMICOLON
Rule 13    expression -> expression PLUS_OP term
Rule 14    expression -> expression MINUS_OP term
Rule 15    expression -> term
Rule 16    term -> term TIMES_OP factor
Rule 17    term -> term DIVIDE_OP factor
Rule 18    term -> factor
Rule 19    term -> function_call
Rule 20    factor -> INTEGER
Rule 21    factor -> FLOAT
Rule 22    factor -> STRING
Rule 23    factor -> IDENTIFIER
Rule 24    factor -> KEYWORD_TRUE
Rule 25    factor -> KEYWORD_FALSE
Rule 26    factor -> LPAREN expression RPAREN
Rule 27    factor -> PLUS_OP factor
Rule 28    factor -> MINUS_OP factor
Rule 29    control_statement -> if_statement
Rule 30    control_statement -> for_statement
Rule 31    control_statement -> while_statement
Rule 32    control_statement -> function_call SEMICOLON
Rule 33    if_statement -> KEYWORD_IF condition block else_part
Rule 34    else_part -> KEYWORD_ELSE block
Rule 35    else_part -> KEYWORD_ELSEIF condition block else_part
Rule 36    else_part -> empty
Rule 37    for_statement -> KEYWORD_FOR IDENTIFIER ASSIGNMENT_OP expression KEYWORD_TO expression block
Rule 38    for_statement -> KEYWORD_FOR IDENTIFIER ASSIGNMENT_OP expression KEYWORD_TO expression KEYWORD_STEP expression block
Rule 39    for_statement -> KEYWORD_FOR declaration KEYWORD_TO expression KEYWORD_STEP expression block
Rule 40    for_statement -> KEYWORD_FOR declaration KEYWORD_TO expression block
Rule 41    while_statement -> KEYWORD_WHILE condition block
Rule 42    block -> KEYWORD_BEGIN statement_list KEYWORD_END
Rule 43    block -> statement
Rule 44    condition -> expression LT_OP expression
Rule 45    condition -> expression GT_OP expression
Rule 46    condition -> expression LE_OP expression
Rule 47    condition -> expression GE_OP expression
Rule 48    condition -> expression EQ_OP expression
Rule 49    condition -> expression NE_OP expression
Rule 50    condition -> condition KEYWORD_AND condition
Rule 51    condition -> condition KEYWORD_OR condition
Rule 52    condition -> KEYWORD_NOT condition
Rule 53    condition -> expression
Rule 54    condition -> LPAREN condition RPAREN
Rule 55    natural_language -> SET_KEYWORD_NATURAL_LANG IDENTIFIER KEYWORD_TO expression SEMICOLON
Rule 56    natural_language -> ADD_KEYWORD_NATURAL_LANG expression KEYWORD_TO IDENTIFIER SEMICOLON
Rule 57    natural_language -> SUB_KEYWORD_NATURAL_LANG expression FROM_KEYWORD_NATURAL_LANG IDENTIFIER SEMICOLON
Rule 58    natural_language -> MULT_KEYWORD_NATURAL_LANG IDENTIFIER BY_KEYWORD_NATURAL_LANG expression SEMICOLON
Rule 59    natural_language -> DIV_KEYWORD_NATURAL_LANG IDENTIFIER BY_KEYWORD_NATURAL_LANG expression SEMICOLON
Rule 60    natural_language -> KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG LT_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
Rule 61    natural_language -> KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG GT_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
Rule 62    natural_language -> KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG LE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
Rule 63    natural_language -> KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG GE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
Rule 64    natural_language -> KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG EQ_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
Rule 65    natural_language -> KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG NE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
Rule 66    function_call -> IDENTIFIER LPAREN parameter_list RPAREN
Rule 67    parameter_list -> expression COMMA parameter_list
Rule 68    parameter_list -> expression
Rule 69    parameter_list -> empty
Rule 70    print_statement -> KEYWORD_PRINT LPAREN print_arguments RPAREN SEMICOLON
Rule 71    print_arguments -> printable_item COMMA print_arguments
Rule 72    print_arguments -> printable_item
Rule 73    printable_item -> STRING
Rule 74    printable_item -> expression
Rule 75    function_definition -> KEYWORD_FUNCTION IDENTIFIER LPAREN parameter_declaration_list RPAREN block
Rule 76    function_definition -> KEYWORD_FUNCTION IDENTIFIER LPAREN RPAREN block
Rule 77    parameter_declaration_list -> IDENTIFIER COMMA parameter_declaration_list
Rule 78    parameter_declaration_list -> IDENTIFIER
Rule 79    return_statement -> KEYWORD_RETURN expression SEMICOLON
Rule 80    return_statement -> KEYWORD_RETURN SEMICOLON
Rule 81    break_statement -> KEYWORD_BREAK SEMICOLON
Rule 82    continue_statement -> KEYWORD_CONTINUE SEMICOLON
Rule 83    statement -> return_statement
Rule 84    statement -> break_statement
Rule 85    statement -> continue_statement
Rule 86    statement -> function_definition
Rule 87    empty -> <empty>

Terminals, with rules where they appear

ADD_KEYWORD_NATURAL_LANG : 56
ASSIGNMENT_OP        : 11 12 37 38
BY_KEYWORD_NATURAL_LANG : 58 59
COMMA                : 67 71 77
DIVIDE_OP            : 17
DIV_KEYWORD_NATURAL_LANG : 59
EQ_OP                : 48 64
FLOAT                : 21
FROM_KEYWORD_NATURAL_LANG : 57
GE_OP                : 47 63
GT_OP                : 45 61
IDENTIFIER           : 11 12 23 37 38 55 56 57 58 59 60 61 62 63 64 65 66 75 76 77 78
INTEGER              : 20
IS_KEYWORD_NATURAL_LANG : 60 61 62 63 64 65
KEYWORD_AND          : 50
KEYWORD_BEGIN        : 1 42
KEYWORD_BREAK        : 81
KEYWORD_CONTINUE     : 82
KEYWORD_ELSE         : 34
KEYWORD_ELSEIF       : 35
KEYWORD_END          : 1 42
KEYWORD_FALSE        : 25
KEYWORD_FOR          : 37 38 39 40
KEYWORD_FUNCTION     : 75 76
KEYWORD_IF           : 33 60 61 62 63 64 65
KEYWORD_LET          : 12
KEYWORD_NOT          : 52
KEYWORD_OR           : 51
KEYWORD_PRINT        : 70
KEYWORD_RETURN       : 79 80
KEYWORD_STEP         : 38 39
KEYWORD_TO           : 37 38 39 40 55 56
KEYWORD_TRUE         : 24
KEYWORD_WHILE        : 41
LBRACE               : 
LE_OP                : 46 62
LPAREN               : 26 54 66 70 75 76
LT_OP                : 44 60
MINUS_OP             : 14 28
MULT_KEYWORD_NATURAL_LANG : 58
NEWLINE              : 
NE_OP                : 49 65
PLUS_OP              : 13 27
RBRACE               : 
RPAREN               : 26 54 66 70 75 76
SEMICOLON            : 7 11 12 32 55 56 57 58 59 70 79 80 81 82
SET_KEYWORD_NATURAL_LANG : 55
STRING               : 22 73
SUB_KEYWORD_NATURAL_LANG : 57
THEN_KEYWORD_NATURAL_LANG : 60 61 62 63 64 65
TIMES_OP             : 16
error                : 

Nonterminals, with rules where they appear

assignment_statement : 6
block                : 33 34 35 37 38 39 40 41 75 76
break_statement      : 84
condition            : 33 35 41 50 50 51 51 52 54
continue_statement   : 85
control_statement    : 4
declaration          : 10 39 40
else_part            : 33 35
empty                : 5 36 69
expression           : 7 11 12 13 14 26 37 37 38 38 38 39 39 40 44 44 45 45 46 46 47 47 48 48 49 49 53 55 56 57 58 59 60 61 62 63 64 65 67 68 74 79
factor               : 16 17 18 27 28
for_statement        : 30
function_call        : 19 32
function_definition  : 86
if_statement         : 29
natural_language     : 9
parameter_declaration_list : 75 77
parameter_list       : 66 67
print_arguments      : 70 71
print_statement      : 8
printable_item       : 71 72
program              : 0
return_statement     : 83
statement            : 3 43
statement_list       : 1 2 3 4 42 60 61 62 63 64 65
term                 : 13 14 15 16 17
while_statement      : 31

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . KEYWORD_BEGIN statement_list KEYWORD_END
    (2) program -> . statement_list
    (3) statement_list -> . statement statement_list
    (4) statement_list -> . control_statement statement_list
    (5) statement_list -> . empty
    (6) statement -> . assignment_statement
    (7) statement -> . expression SEMICOLON
    (8) statement -> . print_statement
    (9) statement -> . natural_language
    (83) statement -> . return_statement
    (84) statement -> . break_statement
    (85) statement -> . continue_statement
    (86) statement -> . function_definition
    (29) control_statement -> . if_statement
    (30) control_statement -> . for_statement
    (31) control_statement -> . while_statement
    (32) control_statement -> . function_call SEMICOLON
    (87) empty -> .
    (10) assignment_statement -> . declaration
    (11) assignment_statement -> . IDENTIFIER ASSIGNMENT_OP expression SEMICOLON
    (13) expression -> . expression PLUS_OP term
    (14) expression -> . expression MINUS_OP term
    (15) expression -> . term
    (70) print_statement -> . KEYWORD_PRINT LPAREN print_arguments RPAREN SEMICOLON
    (55) natural_language -> . SET_KEYWORD_NATURAL_LANG IDENTIFIER KEYWORD_TO expression SEMICOLON
    (56) natural_language -> . ADD_KEYWORD_NATURAL_LANG expression KEYWORD_TO IDENTIFIER SEMICOLON
    (57) natural_language -> . SUB_KEYWORD_NATURAL_LANG expression FROM_KEYWORD_NATURAL_LANG IDENTIFIER SEMICOLON
    (58) natural_language -> . MULT_KEYWORD_NATURAL_LANG IDENTIFIER BY_KEYWORD_NATURAL_LANG expression SEMICOLON
    (59) natural_language -> . DIV_KEYWORD_NATURAL_LANG IDENTIFIER BY_KEYWORD_NATURAL_LANG expression SEMICOLON
    (60) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG LT_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (61) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG GT_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (62) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG LE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (63) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG GE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (64) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG EQ_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (65) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG NE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (79) return_statement -> . KEYWORD_RETURN expression SEMICOLON
    (80) return_statement -> . KEYWORD_RETURN SEMICOLON
    (81) break_statement -> . KEYWORD_BREAK SEMICOLON
    (82) continue_statement -> . KEYWORD_CONTINUE SEMICOLON
    (75) function_definition -> . KEYWORD_FUNCTION IDENTIFIER LPAREN parameter_declaration_list RPAREN block
    (76) function_definition -> . KEYWORD_FUNCTION IDENTIFIER LPAREN RPAREN block
    (33) if_statement -> . KEYWORD_IF condition block else_part
    (37) for_statement -> . KEYWORD_FOR IDENTIFIER ASSIGNMENT_OP expression KEYWORD_TO expression block
    (38) for_statement -> . KEYWORD_FOR IDENTIFIER ASSIGNMENT_OP expression KEYWORD_TO expression KEYWORD_STEP expression block
    (39) for_statement -> . KEYWORD_FOR declaration KEYWORD_TO expression KEYWORD_STEP expression block
    (40) for_statement -> . KEYWORD_FOR declaration KEYWORD_TO expression block
    (41) while_statement -> . KEYWORD_WHILE condition block
    (66) function_call -> . IDENTIFIER LPAREN parameter_list RPAREN
    (12) declaration -> . KEYWORD_LET IDENTIFIER ASSIGNMENT_OP expression SEMICOLON
    (16) term -> . term TIMES_OP factor
    (17) term -> . term DIVIDE_OP factor
    (18) term -> . factor
    (19) term -> . function_call
    (20) factor -> . INTEGER
    (21) factor -> . FLOAT
    (22) factor -> . STRING
    (23) factor -> . IDENTIFIER
    (24) factor -> . KEYWORD_TRUE
    (25) factor -> . KEYWORD_FALSE
    (26) factor -> . LPAREN expression RPAREN
    (27) factor -> . PLUS_OP factor
    (28) factor -> . MINUS_OP factor

    KEYWORD_BEGIN   shift and go to state 2
    $end            reduce using rule 87 (empty -> .)
    IDENTIFIER      shift and go to state 20
    KEYWORD_PRINT   shift and go to state 24
    SET_KEYWORD_NATURAL_LANG shift and go to state 26
    ADD_KEYWORD_NATURAL_LANG shift and go to state 27
    SUB_KEYWORD_NATURAL_LANG shift and go to state 28
    MULT_KEYWORD_NATURAL_LANG shift and go to state 29
    DIV_KEYWORD_NATURAL_LANG shift and go to state 30
    KEYWORD_IF      shift and go to state 31
    KEYWORD_RETURN  shift and go to state 32
    KEYWORD_BREAK   shift and go to state 33
    KEYWORD_CONTINUE shift and go to state 34
    KEYWORD_FUNCTION shift and go to state 35
    KEYWORD_FOR     shift and go to state 36
    KEYWORD_WHILE   shift and go to state 37
    KEYWORD_LET     shift and go to state 38
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    KEYWORD_TRUE    shift and go to state 43
    KEYWORD_FALSE   shift and go to state 44
    LPAREN          shift and go to state 25
    PLUS_OP         shift and go to state 21
    MINUS_OP        shift and go to state 23

    program                        shift and go to state 1
    statement_list                 shift and go to state 3
    statement                      shift and go to state 4
    control_statement              shift and go to state 5
    empty                          shift and go to state 6
    assignment_statement           shift and go to state 7
    expression                     shift and go to state 8
    print_statement                shift and go to state 9
    natural_language               shift and go to state 10
    return_statement               shift and go to state 11
    break_statement                shift and go to state 12
    continue_statement             shift and go to state 13
    function_definition            shift and go to state 14
    if_statement                   shift and go to state 15
    for_statement                  shift and go to state 16
    while_statement                shift and go to state 17
    function_call                  shift and go to state 18
    declaration                    shift and go to state 19
    term                           shift and go to state 22
    factor                         shift and go to state 39

state 1

    (0) S' -> program .



state 2

    (1) program -> KEYWORD_BEGIN . statement_list KEYWORD_END
    (3) statement_list -> . statement statement_list
    (4) statement_list -> . control_statement statement_list
    (5) statement_list -> . empty
    (6) statement -> . assignment_statement
    (7) statement -> . expression SEMICOLON
    (8) statement -> . print_statement
    (9) statement -> . natural_language
    (83) statement -> . return_statement
    (84) statement -> . break_statement
    (85) statement -> . continue_statement
    (86) statement -> . function_definition
    (29) control_statement -> . if_statement
    (30) control_statement -> . for_statement
    (31) control_statement -> . while_statement
    (32) control_statement -> . function_call SEMICOLON
    (87) empty -> .
    (10) assignment_statement -> . declaration
    (11) assignment_statement -> . IDENTIFIER ASSIGNMENT_OP expression SEMICOLON
    (13) expression -> . expression PLUS_OP term
    (14) expression -> . expression MINUS_OP term
    (15) expression -> . term
    (70) print_statement -> . KEYWORD_PRINT LPAREN print_arguments RPAREN SEMICOLON
    (55) natural_language -> . SET_KEYWORD_NATURAL_LANG IDENTIFIER KEYWORD_TO expression SEMICOLON
    (56) natural_language -> . ADD_KEYWORD_NATURAL_LANG expression KEYWORD_TO IDENTIFIER SEMICOLON
    (57) natural_language -> . SUB_KEYWORD_NATURAL_LANG expression FROM_KEYWORD_NATURAL_LANG IDENTIFIER SEMICOLON
    (58) natural_language -> . MULT_KEYWORD_NATURAL_LANG IDENTIFIER BY_KEYWORD_NATURAL_LANG expression SEMICOLON
    (59) natural_language -> . DIV_KEYWORD_NATURAL_LANG IDENTIFIER BY_KEYWORD_NATURAL_LANG expression SEMICOLON
    (60) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG LT_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (61) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG GT_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (62) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG LE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (63) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG GE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (64) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG EQ_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (65) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG NE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (79) return_statement -> . KEYWORD_RETURN expression SEMICOLON
    (80) return_statement -> . KEYWORD_RETURN SEMICOLON
    (81) break_statement -> . KEYWORD_BREAK SEMICOLON
    (82) continue_statement -> . KEYWORD_CONTINUE SEMICOLON
    (75) function_definition -> . KEYWORD_FUNCTION IDENTIFIER LPAREN parameter_declaration_list RPAREN block
    (76) function_definition -> . KEYWORD_FUNCTION IDENTIFIER LPAREN RPAREN block
    (33) if_statement -> . KEYWORD_IF condition block else_part
    (37) for_statement -> . KEYWORD_FOR IDENTIFIER ASSIGNMENT_OP expression KEYWORD_TO expression block
    (38) for_statement -> . KEYWORD_FOR IDENTIFIER ASSIGNMENT_OP expression KEYWORD_TO expression KEYWORD_STEP expression block
    (39) for_statement -> . KEYWORD_FOR declaration KEYWORD_TO expression KEYWORD_STEP expression block
    (40) for_statement -> . KEYWORD_FOR declaration KEYWORD_TO expression block
    (41) while_statement -> . KEYWORD_WHILE condition block
    (66) function_call -> . IDENTIFIER LPAREN parameter_list RPAREN
    (12) declaration -> . KEYWORD_LET IDENTIFIER ASSIGNMENT_OP expression SEMICOLON
    (16) term -> . term TIMES_OP factor
    (17) term -> . term DIVIDE_OP factor
    (18) term -> . factor
    (19) term -> . function_call
    (20) factor -> . INTEGER
    (21) factor -> . FLOAT
    (22) factor -> . STRING
    (23) factor -> . IDENTIFIER
    (24) factor -> . KEYWORD_TRUE
    (25) factor -> . KEYWORD_FALSE
    (26) factor -> . LPAREN expression RPAREN
    (27) factor -> . PLUS_OP factor
    (28) factor -> . MINUS_OP factor

    KEYWORD_END     reduce using rule 87 (empty -> .)
    IDENTIFIER      shift and go to state 20
    KEYWORD_PRINT   shift and go to state 24
    SET_KEYWORD_NATURAL_LANG shift and go to state 26
    ADD_KEYWORD_NATURAL_LANG shift and go to state 27
    SUB_KEYWORD_NATURAL_LANG shift and go to state 28
    MULT_KEYWORD_NATURAL_LANG shift and go to state 29
    DIV_KEYWORD_NATURAL_LANG shift and go to state 30
    KEYWORD_IF      shift and go to state 31
    KEYWORD_RETURN  shift and go to state 32
    KEYWORD_BREAK   shift and go to state 33
    KEYWORD_CONTINUE shift and go to state 34
    KEYWORD_FUNCTION shift and go to state 35
    KEYWORD_FOR     shift and go to state 36
    KEYWORD_WHILE   shift and go to state 37
    KEYWORD_LET     shift and go to state 38
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    KEYWORD_TRUE    shift and go to state 43
    KEYWORD_FALSE   shift and go to state 44
    LPAREN          shift and go to state 25
    PLUS_OP         shift and go to state 21
    MINUS_OP        shift and go to state 23

    statement_list                 shift and go to state 45
    statement                      shift and go to state 4
    control_statement              shift and go to state 5
    empty                          shift and go to state 6
    assignment_statement           shift and go to state 7
    expression                     shift and go to state 8
    print_statement                shift and go to state 9
    natural_language               shift and go to state 10
    return_statement               shift and go to state 11
    break_statement                shift and go to state 12
    continue_statement             shift and go to state 13
    function_definition            shift and go to state 14
    if_statement                   shift and go to state 15
    for_statement                  shift and go to state 16
    while_statement                shift and go to state 17
    function_call                  shift and go to state 18
    declaration                    shift and go to state 19
    term                           shift and go to state 22
    factor                         shift and go to state 39

state 3

    (2) program -> statement_list .

    $end            reduce using rule 2 (program -> statement_list .)


state 4

    (3) statement_list -> statement . statement_list
    (3) statement_list -> . statement statement_list
    (4) statement_list -> . control_statement statement_list
    (5) statement_list -> . empty
    (6) statement -> . assignment_statement
    (7) statement -> . expression SEMICOLON
    (8) statement -> . print_statement
    (9) statement -> . natural_language
    (83) statement -> . return_statement
    (84) statement -> . break_statement
    (85) statement -> . continue_statement
    (86) statement -> . function_definition
    (29) control_statement -> . if_statement
    (30) control_statement -> . for_statement
    (31) control_statement -> . while_statement
    (32) control_statement -> . function_call SEMICOLON
    (87) empty -> .
    (10) assignment_statement -> . declaration
    (11) assignment_statement -> . IDENTIFIER ASSIGNMENT_OP expression SEMICOLON
    (13) expression -> . expression PLUS_OP term
    (14) expression -> . expression MINUS_OP term
    (15) expression -> . term
    (70) print_statement -> . KEYWORD_PRINT LPAREN print_arguments RPAREN SEMICOLON
    (55) natural_language -> . SET_KEYWORD_NATURAL_LANG IDENTIFIER KEYWORD_TO expression SEMICOLON
    (56) natural_language -> . ADD_KEYWORD_NATURAL_LANG expression KEYWORD_TO IDENTIFIER SEMICOLON
    (57) natural_language -> . SUB_KEYWORD_NATURAL_LANG expression FROM_KEYWORD_NATURAL_LANG IDENTIFIER SEMICOLON
    (58) natural_language -> . MULT_KEYWORD_NATURAL_LANG IDENTIFIER BY_KEYWORD_NATURAL_LANG expression SEMICOLON
    (59) natural_language -> . DIV_KEYWORD_NATURAL_LANG IDENTIFIER BY_KEYWORD_NATURAL_LANG expression SEMICOLON
    (60) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG LT_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (61) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG GT_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (62) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG LE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (63) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG GE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (64) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG EQ_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (65) natural_language -> . KEYWORD_IF IDENTIFIER IS_KEYWORD_NATURAL_LANG NE_OP expression THEN_KEYWORD_NATURAL_LANG statement_list
    (79) return_statement -> . KEYWORD_RETURN expression SEMICOLON
    (80) return_statement -> . KEYWORD_RETURN SEMICOLON
    (81) break_statement -> . KEYWORD_BREAK SEMICOLON
    (82) continue_statement -> . KEYWORD_CONTINUE SEMICOLON
    (75) function_definition -> . KEYWORD_FUNCTION IDENTIFIER LPAREN parameter_declaration_list RPAREN block
    (76) function_definition -> . KEYWORD_FUNCTION IDENTIFIER LPAREN RPAREN block
    (33) if_statement -> . KEYWORD_IF condition block else_part
    (37) for_statement -> . KEYWORD_FOR IDENTIFIER ASSIGNMENT_OP expression KEYWORD_TO expression block
    (38) for_statement -> . KEYWORD_FOR IDENTIFIER ASSIGNMENT_OP expression KEYWORD_TO expression KEYWORD_STEP expression block
    (39) for_statement -> . KEYWORD_FOR declaration KEYWORD_TO expression KEYWORD_STEP expression block
    (40) for_statement -> . KEYWORD_FOR declaration KEYWORD_TO expression block
    (41) while_statement -> . KEYWORD_WHILE condition block
    (66) function_call -> . IDENTIFIER LPAREN parameter_list RPAREN
    (12) declaration -> . KEYWORD_LET IDENTIFIER ASSIGNMENT_OP expression SEMICOLON
    (16) term -> . term TIMES_OP factor
    (17) term -> . term DIVIDE_OP factor
    (18) term -> . factor
    (19) term -> . function_call
    (20) factor -> . INTEGER
    (21) factor -> . FLOAT
    (22) factor -> . STRING
    (23) factor -> . IDENTIFIER
    (24) factor -> . KEYWORD_TRUE
    (25) factor -> . KEYWORD_FALSE
    (26) factor -> . LPAREN expression RPAREN
    (27) factor -> . PLUS_OP factor
    (28) factor -> . MINUS_OP factor

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for KEYWORD_PRINT resolved as shift
  ! shift/reduce conflict for SET_KEYWORD_NATURAL_LANG resolved as shift
  ! shift/reduce conflict for ADD_KEYWORD_NATURAL_LANG resolved as shift
  ! shift/reduce conflict for SUB_KEYWORD_NATURAL_LANG resolved as shift
  ! shift/reduce conflict for MULT_KEYWORD_NATURAL_LANG resolved as shift
  ! shift/reduce conflict for DIV_KEYWORD_NATURAL_LANG resolved as shift
  ! shift/reduce conflict for KEYWORD_IF resolved as shift
  ! shift/reduce conflict for KEYWORD_RETURN resolved as shift
  ! shift/reduce conflict for KEYWORD_BREAK resolved as shift
  ! shift/reduce conflict for KEYWORD_CONTINUE resolved as shift
  ! shift/reduce conflict for KEYWORD_FUNCTION resolved as shift
  ! shift/reduce conflict for KEYWORD_FOR resolved as shift
  ! shift/reduce conflict for KEYWORD_WHILE resolved as shift
  ! shift/reduce conflict for KEYWORD_LET resolved as shift
  ! shift/reduce conflict for INTEGER resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
  ! shift/reduce conflict for STRING resolved as shift
  ! shift/reduce conflict for KEYWORD_TRUE resolved as shift
  ! shift/reduce conflict for KEYWORD_FALSE resolved as shift
  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for PLUS_OP resolved as shift
  ! shift/reduce conflict for MINUS_OP resolved as shift
    $end            reduce using rule 87 (empty -> .)
    KEYWORD_END     reduce using rule 87 (empty -> .)
    KEYWORD_ELSE    reduce using rule 87 (empty -> .)
    KEYWORD_ELSEIF  reduce using rule 87 (empty -> .)
    IDENTIFIER      shift and go to state 20
    KEYWORD_PRINT   shift and go to state 24
    SET_KEYWORD_NATURAL_LANG shift and go to state 26
    ADD_KEYWORD_NATURAL_LANG shift and go to state 27
    SUB_KEYWORD_NATURAL_LANG shift and go to state 28
    MULT_KEYWORD_NATURAL_LANG shift and go to state 29
    DIV_KEYWORD_NATURAL_LANG shift and go to state 30
    KEYWORD_IF      shift and go to state 31
    KEYWORD_RETURN  shift and go to state 32
    KEYWORD_BREAK   shift and go to state 33
    KEYWORD_CONTINUE shift and go to state 34
    KEYWORD_FUNCTION shift and go to state 35
    KEYWORD_FOR     shift and go to state 36
    KEYWORD_WHILE   shift and go to state 37
    KEYWORD_LET     shift and go to state 38
    INTEGER         shift and go to state 40
    FLOAT           shift and go to state 41
    STRING          shift and go to state 42
    KEYWORD_TRUE    shift and go to state 43
    KEYWORD_FALSE   shift and go to state 44
    LPAREN          shift and go to state 25
    PLUS_OP         shift and go to state 21
    MINUS_OP        shift and go to state 23

  ! IDENTIFIER      [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_PRINT   [ reduce using rule 87 (empty -> .) ]
  ! SET_KEYWORD_NATURAL_LANG [ reduce using rule 87 (empty -> .) ]
  ! ADD_KEYWORD_NATURAL_LANG [ reduce using rule 87 (empty -> .) ]
  ! SUB_KEYWORD_NATURAL_LANG [ reduce using rule 87 (empty -> .) ]
  ! MULT_KEYWORD_NATURAL_LANG [ reduce using rule 87 (empty -> .) ]
  ! DIV_KEYWORD_NATURAL_LANG [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_IF      [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_RETURN  [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_BREAK   [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_CONTINUE [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_FUNCTION [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_FOR     [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_WHILE   [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_LET     [ reduce using rule 87 (empty -> .) ]
  ! INTEGER         [ reduce using rule 87 (empty -> .) ]
  ! FLOAT           [ reduce using rule 87 (empty -> .) ]
  ! STRING          [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_TRUE    [ reduce using rule 87 (empty -> .) ]
  ! KEYWORD_FALSE   [ reduce using rule 87 (empty -> .) ]
  ! LPAREN          [ reduce using rule 87 (empty -> .) ]
  ! PLUS_OP         [ reduce using rule 87 (empty -> .) ]
  ! MINUS_OP        [ reduce using rule 87 (empty -> .) ]

    statement                      shift and go to state 4
    statement_list                 shift and go to state 46
    control_statement              shift and go to state 5
    empty                          shift and go to state 6
    assignment_statement           shift and go to state 7
    expression                     shift and go to state 8
    print_statement                shift and go to state 9
    natural_language               shift and go to state 10
    return_statement               shift and go to state 11
    break_statement                shift and go to state 12
    continue_statement             shift and go to state 13
    function_definition            shift and go to state 14
    if_statement                   shift and go to state 15
    for_statement                  shift and go to state 16
    while_statement                shift and go to state 17
    function_call                  shift and go to state 18
    declaration                    shift and go to state 19
    term                           shift and go to state 22
    factor                         shift and go to state 39

state 5
